WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293175
PDFPluginBase::countFindMatches() need not be virtual
https://bugs.webkit.org/show_bug.cgi?id=293175
Summary
PDFPluginBase::countFindMatches() need not be virtual
Abrar Rahman Protyasha
Reported
2025-05-17 01:18:12 PDT
Both PDFPlugin and UnifiedPDFPlugin provide the same implementation for this method.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-17 01:18:21 PDT
<
rdar://problem/151516865
>
Abrar Rahman Protyasha
Comment 2
2025-05-17 01:21:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45541
EWS
Comment 3
2025-05-17 12:27:43 PDT
Committed
295060@main
(f30fb6dd8798): <
https://commits.webkit.org/295060@main
> Reviewed commits have been landed. Closing PR #45541 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug