PDFPluginBase::countFindMatches() need not be virtual https://bugs.webkit.org/show_bug.cgi?id=293175 rdar://151516865

Reviewed by Wenson Hsieh and Richard Robinson.

Both PDFPlugin and UnifiedPDFPlugin provide the same implementation for
this method, so lets devirtualize and define it in PDFPluginBase.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::countFindMatches): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::countFindMatches):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::countFindMatches): Deleted.

Canonical link: https://commits.webkit.org/295060@main